# Card-Crush

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
scripts/: fetch-ocr-assets.sh  make-icon.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CardThumb.tsx  CrushRating.tsx  Fields.tsx  ImageDrop.tsx  Layout.tsx  TagInput.tsx  Toast.tsx  nav.ts  ui.tsx
src/data/: defaultPresets.ts
src/db/: database.ts
src/lib/: backup.ts  bgRemoval.ts  export.ts  images.ts  native.ts  ocr.ts  ocrSuggester.ts  utils.ts
src/pages/: AddCard.tsx  Browse.tsx  CardView.tsx  Presets.tsx  Search.tsx  Settings.tsx
src/store/: CollectionContext.tsx
src/types/: index.ts
