[package]
name = "card-crush"
version = "1.0.0"
description = "Card Crush — a character-first trading card collector"
authors = ["Goblin Crafted Co."]
edition = "2021"

[lib]
name = "card_crush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
